# ashpaper

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  spec.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
ashpaper/: Cargo.toml
ashpaper-bin/: Cargo.toml  README.md
ashpaper-bin/poems/: identity.eso  lovely-poem.eso  times-two.eso
ashpaper-bin/src/: main.rs
ashpaper/src/: error.rs  grammar.pest  lib.rs  program.rs
example/: Cargo.toml
example/poems/: factorial.eso
example/src/: main.rs
src/: grammar.pest  lib.rs  parsers.rs  program.rs
