[package]
name = "ashpaper-bin"
description = "CLI for ashpaper, an inpterpreter for Esopo language AshPaper conceived by William Hicks"

authors = ["Shea Newton <shnewto@gmail.com>"]

version = "0.1.1"
license = "MIT"

homepage = "https://github.com/shnewto/ashpaper"
repository = "https://github.com/shnewto/ashpaper"
readme = "README.md"

keywords = ["esolang", "esopo", "poetry", "interpreter", "cli"]

[[bin]]
name = "ashpaper-bin"
path = "src/main.rs"

[dependencies]
ashpaper = "0.1.3"
clap = "2.33.0"
