[package]
name = "ashpaper-bin"
description = "CLI for ashpaper, an inpterpreter for Esopo language AshPaper conceived by William Hicks"

authors = ["Shea Newton <shnewto@gmail.com>"]

version = "0.2.0"
license = "MIT"

homepage = "https://github.com/shnewto/ashpaper"
repository = "https://github.com/shnewto/ashpaper"
readme = "README.md"

keywords = ["esolang", "esopo", "poetry", "interpreter", "cli"]

[[bin]]
name = "ashpaper"
path = "src/main.rs"

[dependencies.ashpaper]
version = "0.2.5"

[dependencies]
clap = "2.33.0"
log = "0.4.0"
env_logger = "0.7.1"
