[package]
name = "ashpaper-bin"
description = "CLI for ashpaper, an inpterpreter for Esopo language AshPaper conceived by William Hicks"

authors = ["Shea Newton <shnewto@gmail.com>"]

version = "0.2.1"
license = "MIT"

homepage = "https://github.com/shnewto/ashpaper"
repository = "https://github.com/shnewto/ashpaper"
readme = "README.md"

keywords = ["esolang", "esopo", "poetry", "interpreter", "cli"]

[[bin]]
name = "ashpaper"
path = "src/main.rs"

[dependencies]
ashpaper = { path = "../ashpaper", version = "0.3.0" }
clap = { version = "4.0.12", features = ["cargo"] }
log = "0.4.0"
env_logger = "0.9.0"
