[package]
name = "ashpaper"
description = "Rust Inpterpreter for Esopo language AshPaper conceived by William Hicks"

authors = ["Shea Newton <shnewto@gmail.com>", "@CrockAgile"]

version = "0.3.0"
license = "MIT"

homepage = "https://github.com/shnewto/ashpaper"
repository = "https://github.com/shnewto/ashpaper"
readme = "../README.md"

keywords = ["esolang", "esopo", "poetry", "interpreter" ]

[lib]
name = "ashpaper"
path = "src/lib.rs"

[dependencies]
wordsworth = "^0.1.0"
pest = "2.1.2"
pest_derive = "2.1.0"
log = "0.4"
ttaw = "0.2.0"
